[package]
name = "macros"
version = "0.1.0"
authors = ["Pulkit Bhardwaj <pulkitbhardwaj1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
