[package]
name = "mettle"
version = "0.1.0"
authors = ["Pulkit Bhardwaj <pulkitbhardwaj1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ORM 
postgres = ["orm/postgres"]
mysql = ["orm/mysql"]
mongo = ["orm/mongo"]

[dependencies]
macros = { path = "../macros" }
graphql = { path = "../graphql" }
orm = { path = "../orm" }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"